feat: zhaopin-auto - AI-powered ZhiLian auto apply
Based on get_jobs (github.com/loks666/get_jobs) by loks666.
This fork focuses exclusively on ZhiLian with AI job matching.

Features:
- AI reads resume.md and job detail to decide match
- Two-phase: collect 200 jobs fast, then AI judge each
- Any OpenAI-compatible API (.env config)
- Tianhe district priority filter
- Education filter (reject low education)
- AGENTS.md for AI agent deployment

Changes from original:
- Removed boss/job51/liepin/lagou platforms
- Removed Playwright/spring-boot dependencies
- Cleaned to 14 Java files, focused on ZhiLian only